tests/error/ptr_implicit_const.gw
#! [contains] can't cast non-mutable value to Ptr
fun void test(<~int~>Ptr i) { <<< *i>>>; }
1 => test;
